--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+        <div class="image">
+            <img src="https://images.pexels.com/photos/207962/pexels-photo-207962.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        </div>
+        <div class="text">
+            <h1>Pricing card</h1>
+            <p>Price: Rs.200</p>
+            <p>Description: Lorem ipsum, dolor sit amet consectetur adipisicing elit. ique illum.
+            Iusto voluptas, cum est aliquam</p>
+        </div>
+        <button>Buy Now</button>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
